Ready to set up python server

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,7 @@ body {
 }
 
 body {
-  background: radial-gradient(circle, #282828, #101010);
+  background: radial-gradient(circle, #383838, #0f0f0f);
 }
 
 a {
