--- a/src/components/FrontPage/FrontPage.module.scss
+++ b/src/components/FrontPage/FrontPage.module.scss
@@ -1,8 +1,27 @@
 .home {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   width: 100vw;
   height: 100vh;
+
+  @media (max-width: 1100px) {
+    flex-direction: column;
+
+    height: 100%;
+    gap: 20px;
+
+    overflow-y: auto;
+
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  @media (max-height: 430px) {
+    height: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    overflow-y: auto;
+  }
 }
