--- a/src/components/InputCard/InputCard.module.scss
+++ b/src/components/InputCard/InputCard.module.scss
@@ -123,6 +123,34 @@
   font-size: 1em;
 }
 
+.analyzingContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+
+  color: white;
+}
+
+.spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #fff;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  margin: 0;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .analyzeButton {
   display: block;
   width: 50%;
@@ -137,13 +165,14 @@
   transition: background-color 0.3s ease;
   user-select: none;
 
+  height: 38px;
+
   &:hover {
     background-color: #45a049;
   }
 
   &:disabled {
     background-color: #a5d6a7;
-    color: #cccccc;
     cursor: not-allowed;
     pointer-events: none;
   }
