--- a/src/components/ResultsComponent/ResultsComponent.module.scss
+++ b/src/components/ResultsComponent/ResultsComponent.module.scss
@@ -28,6 +28,49 @@
     width: 90vw;
     height: 100%;
   }
+
+  .analysisContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    padding: 20px;
+  }
+
+  .analysisItem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    border-bottom: 1px solid #eee;
+
+    color: black;
+    width: 210px;
+  }
+
+  .totalCommentItem {
+    @extend .analysisItem;
+
+    width: 300px;
+  }
+
+  .label {
+    font-weight: bold;
+    color: #333;
+  }
+
+  .positive {
+    color: green;
+  }
+
+  .negative {
+    color: red;
+  }
+
+  @media (max-width: 768px) {
+    .analysisContainer {
+      grid-template-columns: 1fr;
+    }
+  }
 }
 
 .card:hover {
@@ -45,12 +88,10 @@
   padding: 10px;
   font-weight: bold;
   font-size: 1.5rem;
+  margin-bottom: 10px;
 
   width: 100%;
-  height: 60px;
 
-  white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
 
   color: #282828;
