--- a/src/components/ResultsComponent/ResultsComponent.module.scss
+++ b/src/components/ResultsComponent/ResultsComponent.module.scss
@@ -2,21 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
 
   height: 85vh;
   width: 60vw;
 
   background-color: #fffff6;
   border-radius: 8px;
-  overflow: hidden;
 
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
   transition: transform 0.3s ease, box-shadow 0.3s ease-in-out;
   min-width: 330px;
   min-height: 380px;
 
-  padding: 20px 15px 20px 15px;
+  padding: 20px 0px 20px 0px;
 
   overflow-y: auto;
 
@@ -29,24 +28,55 @@
     height: 100%;
   }
 
+  .stat {
+    font-size: 1.3rem;
+    color: black;
+  }
+
   .analysisContainer {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     gap: 10px;
     padding: 20px;
   }
 
   .analysisItem {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     padding: 5px;
     border-bottom: 1px solid #eee;
 
+    gap: 10px;
+
     color: black;
-    width: 210px;
+    width: 90%;
   }
 
+  .commentsContainer {
+    background-color: #f8f8f8;
+    padding: 10px;
+    border-radius: 4px;
+    margin-top: 8px;
+    max-height: 400px;
+    overflow-y: auto;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: 100%;
+  }
+
+  .comment {
+    background-color: #ffffff;
+    padding: 8px;
+    margin-bottom: 8px;
+    border-radius: 4px;
+    border: 1px solid #dddddd;
+    font-size: 0.9rem;
+    line-height: 1.4;
+    color: #333333;
+  }
   .totalCommentItem {
     @extend .analysisItem;
 
@@ -88,11 +118,14 @@
   padding: 10px;
   font-weight: bold;
   font-size: 1.5rem;
-  margin-bottom: 10px;
+  padding-bottom: 20px;
+  margin-bottom: 20px;
 
   width: 100%;
 
   text-overflow: ellipsis;
 
   color: #282828;
+
+  border-bottom: 3px solid #282828;
 }
