--- a/src/components/ResultsComponent/ResultsComponent.module.scss
+++ b/src/components/ResultsComponent/ResultsComponent.module.scss
@@ -31,6 +31,7 @@
   .stat {
     font-size: 1.3rem;
     color: black;
+    text-align: center;
   }
 
   .analysisContainer {
@@ -65,6 +66,7 @@
     overflow-y: auto;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 100%;
+    overflow-x: hidden;
   }
 
   .comment {
