--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -75,3 +75,26 @@ a {
     color-scheme: dark;
   }
 }
+
+::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.329);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.6);
+}
+
+* {
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0.2); /* For Firefox */
+}
